y.output
Terminals which are not used

   PERFORM
   UNKNOWN
   ARROW


State 61 conflicts: 1 shift/reduce
State 81 conflicts: 1 shift/reduce
State 112 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 190 conflicts: 1 shift/reduce
State 191 conflicts: 1 shift/reduce
State 198 conflicts: 1 shift/reduce
State 203 conflicts: 1 shift/reduce
State 217 conflicts: 1 shift/reduce
State 219 conflicts: 1 shift/reduce
State 243 conflicts: 1 reduce/reduce
State 275 conflicts: 1 shift/reduce
State 276 conflicts: 1 shift/reduce
State 282 conflicts: 1 shift/reduce
State 288 conflicts: 1 shift/reduce
State 289 conflicts: 1 shift/reduce
State 292 conflicts: 2 reduce/reduce
State 318 conflicts: 3 shift/reduce
State 323 conflicts: 2 shift/reduce, 1 reduce/reduce
State 324 conflicts: 1 shift/reduce
State 464 conflicts: 3 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: statement $end

    1 statement: queries SEMICOLON

    2 queries: query
    3        | queries query

    4 query: alter_clause
    5      | comment_clause
    6      | create_clause
    7      | delete_clause
    8      | drop_clause
    9      | execute_clause
   10      | exists_clause
   11      | explain_clause
   12      | load_clause
   13      | match_clause
   14      | merge_clause
   15      | prepare_clause
   16      | reindex_clause
   17      | remove_clause
   18      | return_clause
   19      | set_graph_clause
   20      | show_clause
   21      | sql_statement
   22      | unwind_clause
   23      | where_clause
   24      | with_clause

   25 alter_clause: ALTER GRAPH IDENTIFIER alter_graph_options
   26             | ALTER VLABEL if_exists_opt IDENTIFIER alter_vlabel_options

   27 alter_graph_options: OWNER IDENTIFIER
   28                    | RENAME IDENTIFIER

   29 alter_vlabel_options: CLUSTER ON IDENTIFIER
   30                     | DISABLE INDEX
   31                     | INHERIT IDENTIFIER
   32                     | NOINHERIT IDENTIFIER
   33                     | OWNER IDENTIFIER
   34                     | RENAME IDENTIFIER
   35                     | SET LOGGED
   36                     | SET STORAGE IDENTIFIER
   37                     | SET UNLOGGED
   38                     | SET WITHOUT CLUSTER

   39 case_clause: CASE identifier_opt WHEN math_expression THEN math_expression ELSE math_expression END

   40 comment_clause: COMMENT ON comment_item IDENTIFIER IS STRING

   41 comment_item: GRAPH
   42             | VLABEL

   43 create_clause: CREATE create_pattern

   44 create_pattern: CONSTRAINT constraint_patt
   45               | logged_opt ELABEL if_exists_opt IDENTIFIER inherits_opt on_clause_opt tablespace_opt disable_index_opt
   46               | logged_opt GRAPH if_exists_opt IDENTIFIER tablespace_opt disable_index_opt
   47               | logged_opt VLABEL if_exists_opt IDENTIFIER inherits_opt on_clause_opt tablespace_opt disable_index_opt
   48               | or_replace_opt FUNCTION function RETURNS setof_opt expression create_function_ext_opt
   49               | pattern_list set_clause_opt

   50 logged_opt: /* empty */
   51           | LOGGED
   52           | UNLOGGED

   53 inherits_opt: /* empty */
   54             | INHERITS expression

   55 on_clause_opt: /* empty */
   56              | on_clause

   57 tablespace_opt: /* empty */
   58               | TABLESPACE IDENTIFIER

   59 disable_index_opt: /* empty */
   60                  | DISABLE INDEX

   61 constraint_patt: identifier_opt ON IDENTIFIER assert_patt_opt

   62 assert_patt_opt: /* empty */
   63                | ASSERT compare_list
   64                | ASSERT LPAREN compare_list RPAREN

   65 compare_list: math_expression constraint_addon_opt
   66             | math_expression constraint_addon_opt logic compare_list

   67 constraint_addon_opt: /* empty */
   68                     | IS not_opt UNIQUE constraint_addon_opt
   69                     | IS not_opt NUL constraint_addon_opt
   70                     | not_opt IN expression constraint_addon_opt

   71 or_replace_opt: /* empty */
   72               | OR REPLACE

   73 setof_opt: /* empty */
   74          | SETOF

   75 create_function_ext_opt: /* empty */
   76                        | create_function_exts

   77 create_function_exts: create_function_ext
   78                     | create_function_exts create_function_ext

   79 create_function_ext: LANGUAGE str_val
   80                    | VOLATILE
   81                    | IMMUTABLE
   82                    | STABLE
   83                    | PARALLEL SAFE
   84                    | STRICT
   85                    | CALLED ON NUL INPUT
   86                    | RETURNS NUL ON NUL INPUT
   87                    | AS str_val
   88                    | AS DOLLAR identifier_opt DOLLAR declare_opt BGN create_function_contents END DOLLAR identifier_opt DOLLAR

   89 declare_opt: /* empty */
   90            | DECLARE declare_list

   91 declare_list: IDENTIFIER IDENTIFIER SEMICOLON
   92             | declare_list IDENTIFIER IDENTIFIER SEMICOLON

   93 create_function_contents: create_function_content
   94                         | create_function_contents create_function_content

   95 create_function_content: math_expression SEMICOLON
   96                        | queries into_opt SEMICOLON
   97                        | RETURN QUERY queries into_opt SEMICOLON

   98 into_opt: /* empty */
   99         | INTO identifier_list

  100 delete_clause: detach_opt DELETE expression_list set_clause_opt

  101 detach_opt: /* empty */
  102           | DETACH

  103 drop_clause: DROP drop_pattern

  104 drop_pattern: CONSTRAINT identifier_opt ON IDENTIFIER assert_patt_opt
  105             | ELABEL IDENTIFIER cascade_opt
  106             | GRAPH if_exists_opt IDENTIFIER cascade_opt
  107             | VLABEL IDENTIFIER cascade_opt

  108 cascade_opt: /* empty */
  109            | CASCADE

  110 execute_clause: EXECUTE IDENTIFIER stmt_info_opt

  111 stmt_info_opt: /* empty */
  112              | LPAREN item_list RPAREN

  113 exists_clause: EXISTS LPAREN exists_pattern RPAREN
  114              | exists_clause COMMA exists_pattern

  115 exists_pattern: expression
  116               | path_pattern

  117 explain_clause: EXPLAIN explain_list
  118               | EXPLAIN LPAREN explain_list RPAREN

  119 explain_list: explain_item
  120             | explain_list COMMA explain_item

  121 explain_item: VERBOSE boolean_opt
  122             | COSTSOFF boolean_opt
  123             | IDENTIFIER boolean_opt

  124 load_clause: LOAD load_pattern

  125 load_pattern: FROM IDENTIFIER as_opt
  126             | LABELS with_id_opt IDENTIFIER FROM STRING ON IDENTIFIER
  127             | EDGES IDENTIFIER FROM STRING ON IDENTIFIER

  128 with_id_opt: /* empty */
  129            | WITH IDS

  130 match_clause: optional_opt MATCH pattern_list set_clause_opt

  131 optional_opt: /* empty */
  132             | OPTIONAL

  133 pattern_list: assign_to_variable_opt path_pattern_list
  134             | assign_to_variable_opt LPAREN path_pattern_list RPAREN

  135 assign_to_variable_opt: /* empty */
  136                       | IDENTIFIER EQUALS

  137 path_pattern_list: path_pattern
  138                  | path_pattern_list COMMA assign_to_variable_opt path_pattern

  139 path_pattern: node_pattern
  140             | path_pattern edge_pattern node_pattern

  141 node_pattern: LPAREN node_alias_opt node_labels_opt node_properties_opt only_opt dollar_opt RPAREN
  142             | LPAREN IDENTIFIER compare expression only_opt RPAREN
  143             | LPAREN EQUALS expression RPAREN

  144 node_alias_opt: /* empty */
  145               | IDENTIFIER

  146 node_labels_opt: /* empty */
  147                | COLON IDENTIFIER

  148 node_properties_opt: /* empty */
  149                    | LBRACE map_literal RBRACE

  150 map_literal: /* empty */
  151            | nonempty_map_literal

  152 nonempty_map_literal: map_entry
  153                     | nonempty_map_literal COMMA map_entry

  154 map_entry: IDENTIFIER COLON math_expression

  155 only_opt: /* empty */
  156         | ONLY

  157 dollar_opt: /* empty */
  158           | DOLLAR IDENTIFIER

  159 edge_pattern: DASH rel_pattern DASH
  160             | LT DASH rel_pattern DASH
  161             | DASH rel_pattern DASH GT

  162 rel_pattern: LBRACKET rel_alias_opt rel_labels_opt only_opt variable_length_edges_opt node_properties_opt RBRACKET
  163            | LBRACKET IDENTIFIER compare expression only_opt RBRACKET

  164 rel_alias_opt: /* empty */
  165              | IDENTIFIER

  166 rel_labels_opt: /* empty */
  167               | COLON IDENTIFIER pipe_opt expression_opt

  168 pipe_opt: /* empty */
  169         | PIPE IDENTIFIER

  170 variable_length_edges_opt: /* empty */
  171                          | ASTERISK edge_length_opt

  172 edge_length_opt: /* empty */
  173                | INTEGER dot_opt upper_bound_opt
  174                | DOT DOT INTEGER

  175 dot_opt: /* empty */
  176        | DOT DOT

  177 upper_bound_opt: /* empty */
  178                | INTEGER

  179 merge_clause: MERGE path_pattern set_clause_opt

  180 on_clause: ON on_pattern

  181 on_pattern: CREATE
  182           | MATCH

  183 order_clause: ORDER BY sort_item_list

  184 sort_item_list: sort_item
  185               | sort_item_list COMMA sort_item

  186 sort_item: expression sort_direction_opt

  187 sort_direction_opt: /* empty */
  188                   | ASC
  189                   | DESC

  190 prepare_clause: PREPARE IDENTIFIER stmt_info_opt AS

  191 reindex_clause: REINDEX VLABEL IDENTIFIER

  192 remove_clause: REMOVE expression_list

  193 return_clause: RETURN distinct_not_opt return_item_clause union_opt

  194 distinct_not_opt: /* empty */
  195                 | DISTINCT
  196                 | NOT

  197 return_item_clause: return_item_list str_match_clause_opt order_clause_opt skip_clause_opt limit_clause_opt
  198                   | LBRACKET return_item_list str_match_clause_opt RBRACKET order_clause_opt skip_clause_opt limit_clause_opt

  199 return_item_list: item typecast_opt
  200                 | return_item_list COMMA item typecast_opt

  201 str_match_clause_opt: /* empty */
  202                     | STARTS WITH expression
  203                     | ENDS WITH expression
  204                     | CONTAINS expression
  205                     | EQUALSTILDE expression

  206 union_opt: /* empty */
  207          | UNION
  208          | UNIONALL

  209 set_clause: SET assign_list
  210           | set_clause SET assign_list

  211 assign_list: math_expression
  212            | assign_list COMMA math_expression

  213 set_graph_clause: SET graph_option EQUALS graph_path_list

  214 graph_option: GRAPH
  215             | GRAPH_PATH

  216 graph_path_list: IDENTIFIER
  217                | graph_path_list COMMA IDENTIFIER

  218 show_clause: SHOW graph_option

  219 sql_statement: sql_query

  220 sql_query: select_clause

  221 select_clause: SELECT expression_list from_clause

  222 from_clause: FROM LPAREN queries RPAREN as_clause

  223 as_clause: AS IDENTIFIER
  224          | AS UNDER LPAREN identifier_list RPAREN

  225 unwind_clause: UNWIND expression AS IDENTIFIER

  226 where_clause: WHERE where_expression

  227 where_expression: exists_clause
  228                 | not_opt expression where_compare_opt
  229                 | where_expression logic where_expression

  230 where_compare_opt: /* empty */
  231                  | compare not_opt expression
  232                  | IS not_opt expression
  233                  | not_opt IN not_opt expression

  234 with_clause: WITH distinct_opt item_clause

  235 item_clause: item_list order_clause_opt skip_clause_opt limit_clause_opt
  236            | LPAREN item_list RPAREN order_clause_opt skip_clause_opt limit_clause_opt

  237 boolean: TRU
  238        | FAL

  239 compare: EQUALS
  240        | EQUALS EQUALS
  241        | EXCLAMATION EQUALS
  242        | LT
  243        | GT
  244        | LT EQUALS
  245        | GT EQUALS
  246        | LT GT

  247 expression_list: expression expression_ext_opt
  248                | expression_list COMMA expression expression_ext_opt

  249 expression: NUL
  250           | negative_opt INTEGER typecast_opt
  251           | negative_opt FLOAT typecast_opt
  252           | str_val array_opt dot_operator_opt typecast_opt
  253           | boolean
  254           | LBRACKET list_opt RBRACKET
  255           | LBRACE map_literal RBRACE
  256           | LPAREN sql_statement RPAREN
  257           | function array_opt dot_operator_opt typecast_opt
  258           | LPAREN function RPAREN array_opt dot_operator_opt
  259           | LPAREN id_list RPAREN
  260           | DOLLAR INTEGER
  261           | DOLLAR IDENTIFIER
  262           | ASTERISK

  263 negative_opt: /* empty */
  264             | DASH

  265 array_opt: /* empty */
  266          | LBRACKET expression RBRACKET

  267 dot_operator_opt: /* empty */
  268                 | DOT IDENTIFIER

  269 list_opt: /* empty */
  270         | list

  271 list: expression
  272     | list COMMA expression

  273 expression_ext_opt: /* empty */
  274                   | IN expression where_clause_opt

  275 where_clause_opt: /* empty */
  276                 | where_clause

  277 function: IDENTIFIER LPAREN function_params_opt RPAREN
  278         | IDENTIFIER LPAREN expression_list RPAREN
  279         | IDENTIFIER LPAREN path_pattern RPAREN
  280         | IDENTIFIER LPAREN ASTERISK RPAREN

  281 function_params_opt: /* empty */
  282                    | function_params

  283 function_params: IDENTIFIER math_expression
  284                | function_params COMMA IDENTIFIER math_expression

  285 id_list: IDENTIFIER
  286        | IDENTIFIER COMMA id_list
  287        | IDENTIFIER IN expression

  288 identifier_list: IDENTIFIER
  289                | identifier_list COMMA IDENTIFIER

  290 item_list: item
  291          | item_list COMMA item

  292 item: math_expression is_expression_opt
  293     | math_expression is_expression_opt AS IDENTIFIER
  294     | math_expression is_expression_opt EQUALS math_expression is_expression_opt AS IDENTIFIER
  295     | math_expression IN math_expression
  296     | math_expression IN math_expression PIPE expression
  297     | exists_clause
  298     | exists_clause AS IDENTIFIER
  299     | case_clause

  300 is_expression_opt: /* empty */
  301                  | IS not_opt expression

  302 logic: AND
  303      | OR
  304      | XOR

  305 math_expression: expression
  306                | math_expression compare expression
  307                | math_expression PLUS expression
  308                | math_expression PLUS EQUALS expression
  309                | math_expression DASH expression
  310                | math_expression DASH EQUALS expression
  311                | math_expression ASTERISK expression
  312                | math_expression ASTERISK EQUALS expression
  313                | math_expression SLASH expression
  314                | math_expression SLASH EQUALS expression
  315                | math_expression PERCENT expression
  316                | math_expression CARET expression

  317 str_val: IDENTIFIER
  318        | STRING

  319 as_opt: /* empty */
  320       | AS IDENTIFIER

  321 boolean_opt: /* empty */
  322            | boolean

  323 distinct_opt: /* empty */
  324             | DISTINCT

  325 expression_opt: /* empty */
  326               | EQUALS expression

  327 identifier_opt: /* empty */
  328               | IDENTIFIER

  329 if_exists_opt: /* empty */
  330              | IF not_opt EXISTS

  331 limit_clause_opt: /* empty */
  332                 | LIMIT INTEGER

  333 not_opt: /* empty */
  334        | NOT

  335 order_clause_opt: /* empty */
  336                 | order_clause

  337 set_clause_opt: /* empty */
  338               | set_clause

  339 skip_clause_opt: /* empty */
  340                | SKIP INTEGER

  341 typecast_opt: /* empty */
  342             | COLON COLON str_val


Terminals, with rules where they appear

$end (0) 0
error (256)
ALTER (258) 25 26
AND (259) 302
AS (260) 87 88 190 223 224 225 293 294 298 320
ASC (261) 188
ASSERT (262) 63 64
ASTERISK (263) 171 262 280 311 312
BGN (264) 88
BY (265) 183
CALLED (266) 85
CARET (267) 316
CASCADE (268) 109
CASE (269) 39
CLUSTER (270) 29 38
COLON (271) 147 154 167 342
COMMA (272) 114 120 138 153 185 200 212 217 248 272 284 286 289 291
COMMENT (273) 40
CONSTRAINT (274) 44 104
CONTAINS (275) 204
COSTSOFF (276) 122
CREATE (277) 43 181
DASH (278) 159 160 161 264 309 310
DELETE (279) 100
DECLARE (280) 90
DESC (281) 189
DETACH (282) 102
DISABLE (283) 30 60
DISTINCT (284) 195 324
DOLLAR (285) 88 158 260 261
DOT (286) 174 176 268
DROP (287) 103
EDGES (288) 127
ELABEL (289) 45 105
ELSE (290) 39
END (291) 39 88
ENDS (292) 203
EQUALS (293) 136 143 213 239 240 241 244 245 294 308 310 312 314 326
EQUALSTILDE (294) 205
EXCLAMATION (295) 241
EXECUTE (296) 110
EXISTS (297) 113 330
EXPLAIN (298) 117 118
FAL (299) 238
FROM (300) 125 126 127 222
FUNCTION (301) 48
GRAPH (302) 25 41 46 106 214
GRAPH_PATH (303) 215
GT (304) 161 243 245 246
IDS (305) 129
IF (306) 330
IMMUTABLE (307) 81
IN (308) 70 233 274 287 295 296
INDEX (309) 30 60
INHERIT (310) 31
INHERITS (311) 54
INPUT (312) 85 86
INTO (313) 99
IS (314) 40 68 69 232 301
LABELS (315) 126
LANGUAGE (316) 79
LBRACE (317) 149 255
LBRACKET (318) 162 163 198 254 266
LIMIT (319) 332
LOAD (320) 124
LOGGED (321) 35 51
LPAREN (322) 64 112 113 118 134 141 142 143 222 224 236 256 258 259
    277 278 279 280
LT (323) 160 242 244 246
MATCH (324) 130 182
MERGE (325) 179
NOINHERIT (326) 32
NOT (327) 196 334
NUL (328) 69 85 86 249
OPTIONAL (329) 132
ON (330) 29 40 61 85 86 104 126 127 180
ONLY (331) 156
OR (332) 72 303
ORDER (333) 183
OWNER (334) 27 33
PARALLEL (335) 83
PERCENT (336) 315
PERFORM (337)
PIPE (338) 169 296
PLUS (339) 307 308
PREPARE (340) 190
QUERY (341) 97
RBRACE (342) 149 255
RBRACKET (343) 162 163 198 254 266
REINDEX (344) 191
REMOVE (345) 192
RENAME (346) 28 34
REPLACE (347) 72
RETURN (348) 97 193
RETURNS (349) 48 86
RPAREN (350) 64 112 113 118 134 141 142 143 222 224 236 256 258 259
    277 278 279 280
SAFE (351) 83
SELECT (352) 221
SEMICOLON (353) 1 91 92 95 96 97
SET (354) 35 36 37 38 209 210 213
SETOF (355) 74
SHOW (356) 218
SKIP (357) 340
SLASH (358) 313 314
STABLE (359) 82
STARTS (360) 202
STORAGE (361) 36
STRICT (362) 84
TABLESPACE (363) 58
THEN (364) 39
TRU (365) 237
UNDER (366) 224
UNION (367) 207
UNIONALL (368) 208
UNIQUE (369) 68
UNLOGGED (370) 37 52
UNWIND (371) 225
VERBOSE (372) 121
VLABEL (373) 26 42 47 107 191
VOLATILE (374) 80
WHEN (375) 39
WHERE (376) 226
WITH (377) 129 202 203 234
WITHOUT (378) 38
XOR (379) 304
INTEGER (380) 173 174 178 250 260 332 340
FLOAT (381) 251
IDENTIFIER (382) 25 26 27 28 29 31 32 33 34 36 40 45 46 47 58 61 91
    92 104 105 106 107 110 123 125 126 127 136 142 145 147 154 158
    163 165 167 169 190 191 216 217 223 225 261 268 277 278 279 280
    283 284 285 286 287 288 289 293 294 298 317 320 328
STRING (383) 40 126 127 318
UNKNOWN (384)
ARROW (385)


Nonterminals, with rules where they appear

$accept (131)
    on left: 0
statement (132)
    on left: 1, on right: 0
queries (133)
    on left: 2 3, on right: 1 3 96 97 222
query (134)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24, on right: 2 3
alter_clause (135)
    on left: 25 26, on right: 4
alter_graph_options (136)
    on left: 27 28, on right: 25
alter_vlabel_options (137)
    on left: 29 30 31 32 33 34 35 36 37 38, on right: 26
case_clause (138)
    on left: 39, on right: 299
comment_clause (139)
    on left: 40, on right: 5
comment_item (140)
    on left: 41 42, on right: 40
create_clause (141)
    on left: 43, on right: 6
create_pattern (142)
    on left: 44 45 46 47 48 49, on right: 43
logged_opt (143)
    on left: 50 51 52, on right: 45 46 47
inherits_opt (144)
    on left: 53 54, on right: 45 47
on_clause_opt (145)
    on left: 55 56, on right: 45 47
tablespace_opt (146)
    on left: 57 58, on right: 45 46 47
disable_index_opt (147)
    on left: 59 60, on right: 45 46 47
constraint_patt (148)
    on left: 61, on right: 44
assert_patt_opt (149)
    on left: 62 63 64, on right: 61 104
compare_list (150)
    on left: 65 66, on right: 63 64 66
constraint_addon_opt (151)
    on left: 67 68 69 70, on right: 65 66 68 69 70
or_replace_opt (152)
    on left: 71 72, on right: 48
setof_opt (153)
    on left: 73 74, on right: 48
create_function_ext_opt (154)
    on left: 75 76, on right: 48
create_function_exts (155)
    on left: 77 78, on right: 76 78
create_function_ext (156)
    on left: 79 80 81 82 83 84 85 86 87 88, on right: 77 78
declare_opt (157)
    on left: 89 90, on right: 88
declare_list (158)
    on left: 91 92, on right: 90 92
create_function_contents (159)
    on left: 93 94, on right: 88 94
create_function_content (160)
    on left: 95 96 97, on right: 93 94
into_opt (161)
    on left: 98 99, on right: 96 97
delete_clause (162)
    on left: 100, on right: 7
detach_opt (163)
    on left: 101 102, on right: 100
drop_clause (164)
    on left: 103, on right: 8
drop_pattern (165)
    on left: 104 105 106 107, on right: 103
cascade_opt (166)
    on left: 108 109, on right: 105 106 107
execute_clause (167)
    on left: 110, on right: 9
stmt_info_opt (168)
    on left: 111 112, on right: 110 190
exists_clause (169)
    on left: 113 114, on right: 10 114 227 297 298
exists_pattern (170)
    on left: 115 116, on right: 113 114
explain_clause (171)
    on left: 117 118, on right: 11
explain_list (172)
    on left: 119 120, on right: 117 118 120
explain_item (173)
    on left: 121 122 123, on right: 119 120
load_clause (174)
    on left: 124, on right: 12
load_pattern (175)
    on left: 125 126 127, on right: 124
with_id_opt (176)
    on left: 128 129, on right: 126
match_clause (177)
    on left: 130, on right: 13
optional_opt (178)
    on left: 131 132, on right: 130
pattern_list (179)
    on left: 133 134, on right: 49 130
assign_to_variable_opt (180)
    on left: 135 136, on right: 133 134 138
path_pattern_list (181)
    on left: 137 138, on right: 133 134 138
path_pattern (182)
    on left: 139 140, on right: 116 137 138 140 179 279
node_pattern (183)
    on left: 141 142 143, on right: 139 140
node_alias_opt (184)
    on left: 144 145, on right: 141
node_labels_opt (185)
    on left: 146 147, on right: 141
node_properties_opt (186)
    on left: 148 149, on right: 141 162
map_literal (187)
    on left: 150 151, on right: 149 255
nonempty_map_literal (188)
    on left: 152 153, on right: 151 153
map_entry (189)
    on left: 154, on right: 152 153
only_opt (190)
    on left: 155 156, on right: 141 142 162 163
dollar_opt (191)
    on left: 157 158, on right: 141
edge_pattern (192)
    on left: 159 160 161, on right: 140
rel_pattern (193)
    on left: 162 163, on right: 159 160 161
rel_alias_opt (194)
    on left: 164 165, on right: 162
rel_labels_opt (195)
    on left: 166 167, on right: 162
pipe_opt (196)
    on left: 168 169, on right: 167
variable_length_edges_opt (197)
    on left: 170 171, on right: 162
edge_length_opt (198)
    on left: 172 173 174, on right: 171
dot_opt (199)
    on left: 175 176, on right: 173
upper_bound_opt (200)
    on left: 177 178, on right: 173
merge_clause (201)
    on left: 179, on right: 14
on_clause (202)
    on left: 180, on right: 56
on_pattern (203)
    on left: 181 182, on right: 180
order_clause (204)
    on left: 183, on right: 336
sort_item_list (205)
    on left: 184 185, on right: 183 185
sort_item (206)
    on left: 186, on right: 184 185
sort_direction_opt (207)
    on left: 187 188 189, on right: 186
prepare_clause (208)
    on left: 190, on right: 15
reindex_clause (209)
    on left: 191, on right: 16
remove_clause (210)
    on left: 192, on right: 17
return_clause (211)
    on left: 193, on right: 18
distinct_not_opt (212)
    on left: 194 195 196, on right: 193
return_item_clause (213)
    on left: 197 198, on right: 193
return_item_list (214)
    on left: 199 200, on right: 197 198 200
str_match_clause_opt (215)
    on left: 201 202 203 204 205, on right: 197 198
union_opt (216)
    on left: 206 207 208, on right: 193
set_clause (217)
    on left: 209 210, on right: 210 338
assign_list (218)
    on left: 211 212, on right: 209 210 212
set_graph_clause (219)
    on left: 213, on right: 19
graph_option (220)
    on left: 214 215, on right: 213 218
graph_path_list (221)
    on left: 216 217, on right: 213 217
show_clause (222)
    on left: 218, on right: 20
sql_statement (223)
    on left: 219, on right: 21 256
sql_query (224)
    on left: 220, on right: 219
select_clause (225)
    on left: 221, on right: 220
from_clause (226)
    on left: 222, on right: 221
as_clause (227)
    on left: 223 224, on right: 222
unwind_clause (228)
    on left: 225, on right: 22
where_clause (229)
    on left: 226, on right: 23 276
where_expression (230)
    on left: 227 228 229, on right: 226 229
where_compare_opt (231)
    on left: 230 231 232 233, on right: 228
with_clause (232)
    on left: 234, on right: 24
item_clause (233)
    on left: 235 236, on right: 234
boolean (234)
    on left: 237 238, on right: 253 322
compare (235)
    on left: 239 240 241 242 243 244 245 246, on right: 142 163 231
    306
expression_list (236)
    on left: 247 248, on right: 100 192 221 248 278
expression (237)
    on left: 249 250 251 252 253 254 255 256 257 258 259 260 261 262
   , on right: 48 54 70 115 142 143 163 186 202 203 204 205 225 228
    231 232 233 247 248 266 271 272 274 287 296 301 305 306 307 308
    309 310 311 312 313 314 315 316 326
negative_opt (238)
    on left: 263 264, on right: 250 251
array_opt (239)
    on left: 265 266, on right: 252 257 258
dot_operator_opt (240)
    on left: 267 268, on right: 252 257 258
list_opt (241)
    on left: 269 270, on right: 254
list (242)
    on left: 271 272, on right: 270 272
expression_ext_opt (243)
    on left: 273 274, on right: 247 248
where_clause_opt (244)
    on left: 275 276, on right: 274
function (245)
    on left: 277 278 279 280, on right: 48 257 258
function_params_opt (246)
    on left: 281 282, on right: 277
function_params (247)
    on left: 283 284, on right: 282 284
id_list (248)
    on left: 285 286 287, on right: 259 286
identifier_list (249)
    on left: 288 289, on right: 99 224 289
item_list (250)
    on left: 290 291, on right: 112 235 236 291
item (251)
    on left: 292 293 294 295 296 297 298 299, on right: 199 200 290
    291
is_expression_opt (252)
    on left: 300 301, on right: 292 293 294
logic (253)
    on left: 302 303 304, on right: 66 229
math_expression (254)
    on left: 305 306 307 308 309 310 311 312 313 314 315 316,
    on right: 39 65 66 95 154 211 212 283 284 292 293 294 295 296 306
    307 308 309 310 311 312 313 314 315 316
str_val (255)
    on left: 317 318, on right: 79 87 252 342
as_opt (256)
    on left: 319 320, on right: 125
boolean_opt (257)
    on left: 321 322, on right: 121 122 123
distinct_opt (258)
    on left: 323 324, on right: 234
expression_opt (259)
    on left: 325 326, on right: 167
identifier_opt (260)
    on left: 327 328, on right: 39 61 88 104
if_exists_opt (261)
    on left: 329 330, on right: 26 45 46 47 106
limit_clause_opt (262)
    on left: 331 332, on right: 197 198 235 236
not_opt (263)
    on left: 333 334, on right: 68 69 70 228 231 232 233 301 330
order_clause_opt (264)
    on left: 335 336, on right: 197 198 235 236
set_clause_opt (265)
    on left: 337 338, on right: 49 100 130 179
skip_clause_opt (266)
    on left: 339 340, on right: 197 198 235 236
typecast_opt (267)
    on left: 341 342, on right: 199 200 250 251 252 257


state 0

    0 $accept: . statement $end

    ALTER     shift, and go to state 1
    COMMENT   shift, and go to state 2
    CREATE    shift, and go to state 3
    DETACH    shift, and go to state 4
    DROP      shift, and go to state 5
    EXECUTE   shift, and go to state 6
    EXISTS    shift, and go to state 7
    EXPLAIN   shift, and go to state 8
    LOAD      shift, and go to state 9
    MERGE     shift, and go to state 10
    OPTIONAL  shift, and go to state 11
    PREPARE   shift, and go to state 12
    REINDEX   shift, and go to state 13
    REMOVE    shift, and go to state 14
    RETURN    shift, and go to state 15
    SELECT    shift, and go to state 16
    SET       shift, and go to state 17
    SHOW      shift, and go to state 18
    UNWIND    shift, and go to state 19
    WHERE     shift, and go to state 20
    WITH      shift, and go to state 21

    MATCH     reduce using rule 131 (optional_opt)
    $default  reduce using rule 101 (detach_opt)

    statement         go to state 22
    queries           go to state 23
    query             go to state 24
    alter_clause      go to state 25
    comment_clause    go to state 26
    create_clause     go to state 27
    delete_clause     go to state 28
    detach_opt        go to state 29
    drop_clause       go to state 30
    execute_clause    go to state 31
    exists_clause     go to state 32
    explain_clause    go to state 33
    load_clause       go to state 34
    match_clause      go to state 35
    optional_opt      go to state 36
    merge_clause      go to state 37
    prepare_clause    go to state 38
    reindex_clause    go to state 39
    remove_clause     go to state 40
    return_clause     go to state 41
    set_graph_clause  go to state 42
    show_clause       go to state 43
    sql_statement     go to state 44
    sql_query         go to state 45
    select_clause     go to state 46
    unwind_clause     go to state 47
    where_clause      go to state 48
    with_clause       go to state 49


state 1

   25 alter_clause: ALTER . GRAPH IDENTIFIER alter_graph_options
   26             | ALTER . VLABEL if_exists_opt IDENTIFIER alter_vlabel_options

    GRAPH   shift, and go to state 50
    VLABEL  shift, and go to state 51


state 2

   40 comment_clause: COMMENT . ON comment_item IDENTIFIER IS STRING

    ON  shift, and go to state 52


state 3

   43 create_clause: CREATE . create_pattern

    CONSTRAINT  shift, and go to state 53
    LOGGED      shift, and go to state 54
    OR          shift, and go to state 55
    UNLOGGED    shift, and go to state 56
    IDENTIFIER  shift, and go to state 57

    FUNCTION  reduce using rule 71 (or_replace_opt)
    LPAREN    reduce using rule 135 (assign_to_variable_opt)
    $default  reduce using rule 50 (logged_opt)

    create_pattern          go to state 58
    logged_opt              go to state 59
    or_replace_opt          go to state 60
    pattern_list            go to state 61
    assign_to_variable_opt  go to state 62


state 4

  102 detach_opt: DETACH .

    $default  reduce using rule 102 (detach_opt)


state 5

  103 drop_clause: DROP . drop_pattern

    CONSTRAINT  shift, and go to state 63
    ELABEL      shift, and go to state 64
    GRAPH       shift, and go to state 65
    VLABEL      shift, and go to state 66

    drop_pattern  go to state 67


state 6

  110 execute_clause: EXECUTE . IDENTIFIER stmt_info_opt

    IDENTIFIER  shift, and go to state 68


state 7

  113 exists_clause: EXISTS . LPAREN exists_pattern RPAREN

    LPAREN  shift, and go to state 69


state 8

  117 explain_clause: EXPLAIN . explain_list
  118               | EXPLAIN . LPAREN explain_list RPAREN

    COSTSOFF    shift, and go to state 70
    LPAREN      shift, and go to state 71
    VERBOSE     shift, and go to state 72
    IDENTIFIER  shift, and go to state 73

    explain_list  go to state 74
    explain_item  go to state 75


state 9

  124 load_clause: LOAD . load_pattern

    EDGES   shift, and go to state 76
    FROM    shift, and go to state 77
    LABELS  shift, and go to state 78

    load_pattern  go to state 79


state 10

  179 merge_clause: MERGE . path_pattern set_clause_opt

    LPAREN  shift, and go to state 80

    path_pattern  go to state 81
    node_pattern  go to state 82


state 11

  132 optional_opt: OPTIONAL .

    $default  reduce using rule 132 (optional_opt)


state 12

  190 prepare_clause: PREPARE . IDENTIFIER stmt_info_opt AS

    IDENTIFIER  shift, and go to state 83


state 13

  191 reindex_clause: REINDEX . VLABEL IDENTIFIER

    VLABEL  shift, and go to state 84


state 14

  192 remove_clause: REMOVE . expression_list

    ASTERISK    shift, and go to state 85
    DASH        shift, and go to state 86
    DOLLAR      shift, and go to state 87
    FAL         shift, and go to state 88
    LBRACE      shift, and go to state 89
    LBRACKET    shift, and go to state 90
    LPAREN      shift, and go to state 91
    NUL         shift, and go to state 92
    TRU         shift, and go to state 93
    IDENTIFIER  shift, and go to state 94
    STRING      shift, and go to state 95

    $default  reduce using rule 263 (negative_opt)

    boolean          go to state 96
    expression_list  go to state 97
    expression       go to state 98
    negative_opt     go to state 99
    function         go to state 100
    str_val          go to state 101


state 15

  193 return_clause: RETURN . distinct_not_opt return_item_clause union_opt

    DISTINCT  shift, and go to state 102
    NOT       shift, and go to state 103

    $default  reduce using rule 194 (distinct_not_opt)

    distinct_not_opt  go to state 104


state 16

  221 select_clause: SELECT . expression_list from_clause
